RESOLVED FIXED284050
[WGSL] webgpu:shader,validation,types,textures:* is failing
https://bugs.webkit.org/show_bug.cgi?id=284050
Summary [WGSL] webgpu:shader,validation,types,textures:* is failing
Tadeu Zagallo
Reported 2024-12-04 10:20:31 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-04 10:20:45 PST
Tadeu Zagallo
Comment 2 2024-12-04 10:28:03 PST
EWS
Comment 3 2024-12-06 05:57:52 PST
Committed 287444@main (acc6013cc7d1): <https://commits.webkit.org/287444@main> Reviewed commits have been landed. Closing PR #37444 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.