[WGSL] webgpu:shader,validation,types,textures:* is failing https://bugs.webkit.org/show_bug.cgi?id=284050 rdar://140923477

Reviewed by Mike Wyrzykowski.

According to the spec[1], using an invalid texel format should not be a shader
creation error, which was happening before as the `bgra8unorm` value was conditionally
defined based on the feature being available, which raised a type error at shader
creation time.

[1]: https://www.w3.org/TR/WGSL/#texture-storage

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::TypeChecker):

Canonical link: https://commits.webkit.org/287444@main